--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
+    "sweetalert2": "^11.6.8",
+    "sweetalert2-react-content": "^5.0.7",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4",
     "zustand": "^4.1.4"
